--- a/style.css
+++ b/style.css
@@ -10,7 +10,6 @@
 }
 
 
-
 /* Navbar */
 body {
     margin: 0;
@@ -158,7 +157,63 @@ body {
 
 
 /* Media Queries for home */
+/* laptop () */
+@media (max-width: 2560px){
+  .navbar .logo img {
+    height: 400px;
+    width: auto;
+    margin-bottom: 40px;
+  }
 
+  .the {
+    font-size: 25px;
+    top: -60px;
+    left: 48px;
+  }
+
+  .elephant {
+    font-size: 70px;
+    margin-top: -15px;
+  }
+
+  .sanctuary {
+    font-size: 70px;
+    margin-top: -15px;
+  }
+
+  .banner {
+    background-size: 1600px;
+  }
+}
+
+/* Tablets */
+@media (max-width: 2560px){
+  .navbar .logo img {
+    height: 400px;
+    width: auto;
+    margin-bottom: 40px;
+  }
+
+  .the {
+    font-size: 25px;
+    top: -60px;
+    left: 48px;
+  }
+
+  .elephant {
+    font-size: 70px;
+    margin-top: -15px;
+  }
+
+  .sanctuary {
+    font-size: 70px;
+    margin-top: -15px;
+  }
+
+  .banner {
+    background-size: 1600px;
+  }
+}
  
   /* Learning Opp section */
 
@@ -416,6 +471,8 @@ footer p {
   overflow: hidden;
   float: left;
 }
+
+
 
   
 
