--- a/donate-contactstyle.css
+++ b/donate-contactstyle.css
@@ -323,6 +323,10 @@ footer {
     color: black;
     text-align: center;
     padding: 20px 0;
+    /* position: relative;
+    bottom: 0;
+    right: 0;
+    left: 0; */
 }
 
 footer p {
